# ExpressionWhizz-

./: CMakeLists.txt  main.c
src/: cdict.c  cdict.h  ew_test.c  expr_tree.c  expr_tree.h  parse.c  parse.h  tokenize.c  tokenize.h
tests/: cdict_test.c  cdict_test.h  test_utils.c  test_utils.h
